--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@
                     Ваш пол
                 </div>
                 <div class="calculating__choose" id="gender">
-                    <div class="calculating__choose-item calculating__choose-item_active">Женщина</div>
-                    <div class="calculating__choose-item">Мужчина</div>
+                    <div data-gender="women" class="calculating__choose-item calculating__choose-item_active">Женщина</div>
+                    <div data-gender="men" class="calculating__choose-item">Мужчина</div>
                 </div>
 
                 <div class="calculating__subtitle">
@@ -184,10 +184,10 @@
                     Выберите вашу физическая активность
                 </div>
                 <div class="calculating__choose calculating__choose_big">
-                    <div id="low" class="calculating__choose-item">Низкая активность </div>
-                    <div id="small"  class="calculating__choose-item calculating__choose-item_active">Невысокая активность</div>
-                    <div id="medium" class="calculating__choose-item">Умеренная активность</div>
-                    <div id="high" class="calculating__choose-item">Высокая активность</div>
+                    <div data-active="1.2" id="low" class="calculating__choose-item">Низкая активность </div>
+                    <div data-active="1.375" id="small"  class="calculating__choose-item calculating__choose-item_active">Невысокая активность</div>
+                    <div data-active="1.55" id="medium" class="calculating__choose-item">Умеренная активность</div>
+                    <div data-active="1.7" id="high" class="calculating__choose-item">Высокая активность</div>
                 </div>
 
                 <div class="calculating__divider"></div>
@@ -197,7 +197,7 @@
                         Ваша суточная норма калорий:
                     </div>
                     <div class="calculating__result">
-                        <span>2700</span> ккал
+                        <span id="res_view">2700</span> ккал
                     </div>
                 </div>
             </div>
@@ -327,7 +327,6 @@
         </div>
     </div>
     <script src="./js/index.js"></script>
-    <script src="./js/confetti.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
 
 </body>
